# above-five-hundred

./: .gitignore  AGENTS.md  README.md  _quarto.yml  about.qmd  index.qmd  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  refresh-box-scores.yml  refresh-roster.yml
above500/: __init__.py  club_roster.py  club_spi.py  nba_elo.py  nba_raptor.py  raptor_box.py  render.py  roster.py  wc_elo.py  wc_spi.py
above500/data/: roster_ratings.json  roster_ratings_history.json
data/soccer/: ea_ratings.json  wc_squads.json
docs/models/: nba-elo.md  nba-raptor.md  world-cup-2026.md
forecasts/: nba-elo.qmd  nba-raptor.qmd  world-cup-2026.qmd
scripts/: fetch_roster.py  generate_sample_data.py  prepare_club_results.py  prepare_football_data.py  prepare_nba_data.py  prepare_player_box.py  prepare_po_box.py  prepare_raptor_data.py  prepare_recent_box.py  prepare_roster_history.py  prepare_wc_squads.py
scripts/nba/: prepare_games.py  prepare_player_box.py  prepare_po_box.py  prepare_recent_box.py
scripts/soccer/: fetch_ea_ratings.py  prepare_club_results.py  prepare_ea_history.py  prepare_intl_results.py  prepare_wc_squads.py
site/: about.html  forecast.html  index.html
site/css/: style.css
site/data/: models.json
site/data/nba-elo/: latest.json
site/js/: common.js  forecast.js  home.js
src/above500/: __init__.py  render.py
src/above500/nba/: __init__.py  elo.py  raptor.py  raptor_box.py
src/above500/soccer/: __init__.py  club_names.py  club_roster.py  club_spi.py  ea_roster.py  wc_spi.py
styles/: above500.scss
