[project]
name = "above500"
version = "0.1.0"
description = "FiveThirtyEight-style sports models, rendered with Quarto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "jupyter-core>=5.7",
    "pyyaml>=6.0",
]

# src-layout: `above500` lives under src/ and is installed editable by
# `uv sync`, which is how the Quarto pages import it at render time.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
